# forex-ai-trader

./: .env.example  .gitignore  README.md
backtest_strategies/: results_combo2.pkl  results_combo3.pkl  results_combo4.pkl  results_single.pkl
part1/: README.md  get_historical_data.py  pyproject.toml
part2.1/: README.md  add_technical_indicators.py  dashboard.py  pyproject.toml
part2.2/: README.md  backtest_engine.py  dashboard.py  pyproject.toml
rl_ml/: README.md  __init__.py  a2c_agent_m1.py  benchmark_agents.py  config.py  config_aggressive.py  config_m1.py  data_fetcher.py  enhance_historical_data.py  high_accuracy_agent.py  high_accuracy_env.py  multi_agent_trainer.py  ppo_agent_m1.py  process_existing_data.py  pyproject.toml  quick_train.py  sac_agent.py  sac_agent_m1.py  td3_agent_m1.py  technical_indicators.py  test.py  test_aggressive_config.py  test_high_accuracy.py  test_m1.py  test_minimal.py  test_pipeline.py  trading_env.py  trading_logger.py  train.py  train_aggressive_m1.py  train_full_historical.py  train_full_m1.py  train_high_accuracy.py  train_m1.py  verify_observation_space.py
rl_ml_v2/: README.md
