# For Mac users, install uv with Homebrew: brew install astral-sh/uv/uv
# For other platforms, see https://github.com/astral-sh/uv#installation
[project]
name = "forex-ai-trader-part1"
version = "0.1.0"
description = "Forex AI trader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.1",
    "oandapyv20>=0.7.2",
    "pandas>=2.3.0",
    "requests>=2.32.4"
]
